--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -237,3 +237,93 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+@-webkit-keyframes example {
+  0%   {background-color: red;}
+  25%  {background-color: yellow;}
+  50%  {background-color: blue;}
+  100% {background-color: green;}
+}
+
+/* Standard syntax */
+@keyframes example {
+  0%   {background-color: red;}
+  25%  {background-color: yellow;}
+  50%  {background-color: blue;}
+  100% {background-color: green;}
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    background-image: url('https://images.unsplash.com/photo-1508793156468-aa1cbe7cd67b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=11ed6a6164404d58fa4547b37c75a085&auto=format&fit=crop&w=1502&q=80')
+  }
+
+  .wrapper {
+    /* Box-model */
+    width: 100%;
+    padding: 20px;
+  }
+
+  #main-content,
+  #sidebar {
+    width: 100%;
+  }
+
+  #sidebar {
+    margin-top: 40px;
+  }
+}
+
+/* Additional Screen Sizes */
+
+/* Width at 320px and below */
+@media screen and (max-width: 620px) {
+  body {
+    background-image: url('https://images.unsplash.com/photo-1456154875099-97a3a56074d3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ca30f5f6483a9f52e12246ae395ef9b8&auto=format&fit=crop&w=1789&q=80')
+  }
+
+  .wrapper {
+    /* Box-model */
+    width: 100%;
+    padding: 20px;
+  }
+
+  #main-content,
+  #sidebar {
+    width: 100%;
+  }
+
+  #sidebar {
+    margin-top: 40px;
+  }
+}
+
+/* Width at 168px and below */
+@media screen and (max-width: 468px) {
+  body {
+    background-color: red;
+    -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
+    animation-name: example;
+    animation-duration: 4s;
+  }
+
+  .wrapper {
+    /* Box-model */
+    width: 100%;
+    padding: 20px;
+  }
+
+  #main-content,
+  #sidebar {
+    width: 100%;
+  }
+
+  #sidebar {
+    margin-top: 40px;
+  }
+}
+
+.pr {
+  padding-right: 5px;
+}
